fix navbar submenu on mobiles

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -1586,3 +1586,7 @@ label {
 .navbar-default .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+.navbar-default .navbar-collapse.collapse.in .navbar-nav .open .dropdown-menu>li>a {
+  color: #fff;
+}
